--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-big-calendar": "^1.8.9",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
+    "next": "14.2.6",
     "react": "^18",
+    "react-big-calendar": "^1.13.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-redux": "^9.1.2",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "typescript": "^5"
   }
 }
