--- a/package.json
+++ b/package.json
@@ -10,19 +10,30 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/react-big-calendar": "^1.8.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.435.0",
     "moment": "^2.30.1",
     "next": "14.2.6",
+    "next-themes": "^0.3.0",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-big-calendar": "^1.13.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
